--- a/features/extensions/org.wso2.carbon.store.extensions.assets.gadget.feature/pom.xml
+++ b/features/extensions/org.wso2.carbon.store.extensions.assets.gadget.feature/pom.xml
@@ -43,7 +43,7 @@
                         </goals>
                         <configuration>
                             <id>org.wso2.carbon.store.extensions.assets.gadget</id>
-                            <propertiesFile>../../../etc/feature.properties</propertiesFile>
+                            <propertiesFile>../../etc/feature.properties</propertiesFile>
                             <bundles />
                             <importBundles />
                             <importFeatures>
